report results of images

--- a/Report_Region_Growing_Becker_Kaschnitz_Jung_Möller.ipynb
+++ b/Report_Region_Growing_Becker_Kaschnitz_Jung_Möller.ipynb
@@ -196,8 +196,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -826,7 +835,7 @@
     "\n",
     "Moreover, the nuclei differ greatly in intensity.\n",
     "This needs to be considered for region merging based on intensity distances. The threshold has to be adjusted to the\n",
-    "darkest nuclei to prevent losing nuclei.\n",
+    "darkest nuclei to prevent losing them.\n",
     "\n",
     "### Final results"
    ],
@@ -871,32 +880,32 @@
    "cell_type": "markdown",
    "source": [
     "Seeded and unseeded region growing were performed on the image t13 of the N2DL-Hela Data set.\n",
-    "To improve the results of seeded region growing, the normal image (first image) was preprocessed.\n",
+    "To improve the results of seeded region growing, the normal image was preprocessed.\n",
     "The intensity range was shifted to have 0 as the lowest intensity (ip.subtract_minimum with t13 as the associated image).\n",
     "Moreover, the image was clipped (with 0.05 * max(t13) as the lower and 0.15 * max(t13) as the higher clipping threshold).\n",
     "Lastly, a median filter with sigma 3 was applied.\n",
     "\n",
-    "For seeded region growing (second image), 0.05 was used for the relative Euclidean intensity distance threshold for seed\n",
+    "For seeded region growing, 0.05 was used for the relative Euclidean intensity distance threshold for seed\n",
     "detection (sd.seeds).\n",
     "Seed regions smaller than 20 were removed (sd.reduce_region_number).\n",
     "Region merging was performed with 0.1 as the relative Euclidean intensity distance threshold and 100 as the size\n",
     "threshold.\n",
     "\n",
-    "For unseeded region (fourth image) growing preprocessing was not performed because good results were obtained without\n",
+    "For unseeded region, growing preprocessing was not performed because good results were obtained without\n",
     "it.\n",
     "For computing the unseeded region growing algorithm, (0,0) was selected as the start pixel and 50 as the distance\n",
     "threshold.\n",
-    "In the fifth picture the result after merging with parameters of 0.000001 (relative Euclidean intensity distance)\n",
-    "threshold and 10000 (size threshold) and filtering with a median filter with sigma 3\n",
+    "In the fifth picture the result after merging with 0.000001 (relative Euclidean intensity distance),\n",
+    "10000 (size threshold), filtering with a median filter (sigma 3)\n",
     "to remove salt and pepper noise and clipping is shown.\n",
     "\n",
-    "Comparing the resulting images with the ground truth image (sixth image) shows that in unseeded region growing most nuclei\n",
+    "Comparing the resulting images with the ground truth image shows that in unseeded region growing most nuclei\n",
     "were detected, while after seeded region growing more nuclei are missing.\n",
     "The Dice scores of the results confirm this. It is noticeable that the first data set led to better Dice\n",
     "scores for seeded region growing.\n",
     "\n",
-    "A reason why more nuclei are lost in seeded region growing compared to the first data set are the higher cell density,\n",
-    "and less intensity distances between background and nuclei. Seeds were not found in every nuclei."
+    "A reason why more nuclei are lost in seeded region growing compared to the first data set is the higher cell density,\n",
+    "and less intensity distances between background and nuclei. Not every nucleus contained seeds after the seed detection."
    ],
    "metadata": {
     "collapsed": false
@@ -911,7 +920,7 @@
     "This raises the risk of detecting the reflections as nuclei.\n",
     "Preprocessing to merge the bright spots into the background was evaluated.\n",
     "\n",
-    "Removal of bright spots (middle) and removal of bright spots with a border (right) are compared.\n",
+    "Removal of bright spots and removal of bright spots with a border are compared.\n",
     "For the normal bright spot removal, all pixels with intensities above a threshold are considered as bright and then\n",
     "set to a lower intensity, resembling the background. For the removal with a border, an artificial border is created\n",
     "around the pixels considered as too bright and is also set to a lower intensity value.\n",
@@ -959,7 +968,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The images are now segmented with seeded region growing and clipped afterwards to differentiate nuclei and background."
+    "The images are segmented with seeded region growing and clipped afterwards to differentiate nuclei and background."
    ],
    "metadata": {
     "collapsed": false
@@ -1002,9 +1011,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In the unprocessed image (left) both, bright spot and nuclei, are detected as nuclei.\n",
+    "In the unprocessed image both, bright spot and nuclei, are detected as nuclei.\n",
     "This confirms that a removal of the bright image spots is necessary.\n",
-    "In the image with intact nucleus (middle) only the reflection is detected.\n",
+    "In the image with intact nucleus only the reflection is detected.\n",
     "Not enough of the bright spot was removed. The intensity distance merging threshold\n",
     "rather merges the nucleus to the background than the reflection.\n",
     "Removing a border along with the bright parts of the reflection solves this problem.\n",
@@ -1062,7 +1071,7 @@
     "This has less impact on unseeded region growing because there regions are not limited to one nucleus.\n",
     "\n",
     "### Final results\n",
-    "Below the image dna-42 of the NIH3T3 data set is shown (first image).\n",
+    "Below the image dna-42 of the NIH3T3 data set is shown.\n",
     "For seeded region growing bright spots with border were removed (thresholds: 130 (brightness), 60 (background),\n",
     "30 (border)) and a 3x3 gaussian filter with sigma 1 was used.\n",
     "For the seed detection 0.001 (relative Euclidean intensity distance threshold) was used.\n",
@@ -1162,7 +1171,7 @@
     "\n",
     "Running the algorithm on less challenging images of the data set (dna01) led to better results, and a Dice score of\n",
     "0.86 for seeded and 0.95 for unseeded region growing was obtained. These are the highest Dice scores that were contained.\n",
-    "Numerous and big nuclei lead to the increased Dice scores. \n",
+    "Numerous and big nuclei led to the increased Dice scores.\n",
     "\n",
     "## Evaluation of preprocessing\n",
     "To test, which preprocessing method did lead to the best result, different clipping methods and filters were applied to a small section of an image of the second data set.\n",
@@ -1272,6 +1281,7 @@
     "Regarding the seeded region growing algorithm, for all preprocessing methods the Dice score remained approximately the same or was improved, except for appliying the gaussian filter.\n",
     "This might be caused by the fact that the Gaussian filter with sigma 1 does not change the intensities significantly, but a larger sigma results in blurring and a lower Dice score.\n",
     "Both clipping methods led to significantly improved Dice score, while the normal clipping performs best with a dice score of 0.972.\n",
+    "The reason for the high Dice score is that clipping removes background noise without blurring the image.\n",
     "\n",
     "By applying unseeded region growing to the preprocessed image section all Dice scores could be improved.\n",
     "Again, the Gaussian filter performs worst compared to the other methods.\n",
