--- a/Report_Region_Growing_Becker_Kaschnitz_Jung_Möller.ipynb
+++ b/Report_Region_Growing_Becker_Kaschnitz_Jung_Möller.ipynb
@@ -184,17 +184,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "execution_count": 1,
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -1347,8 +1338,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.65 s ± 200 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "9.79 s ± 2.5 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "665 ms ± 12.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "4.97 s ± 62.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -1390,8 +1381,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "933 ms ± 36.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "24.9 s ± 2.12 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "882 ms ± 12.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "30.6 s ± 10 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -1425,8 +1416,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "678 ms ± 22.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "941 ms ± 46.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "877 ms ± 214 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "991 ms ± 158 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
