--- a/Report_Region_Growing_Becker_Kaschnitz_Jung_Möller.ipynb
+++ b/Report_Region_Growing_Becker_Kaschnitz_Jung_Möller.ipynb
@@ -702,18 +702,18 @@
     "# Evaluation measures\n",
     "\n",
     "## Dice score\n",
-    "The Dice score is a method to determine the accuracy of segmentation. Thereby, a ground truth image (given\n",
-    "in the data set) is compared with the resulting image of the algorithm. The Dice score is defined as follows:\n",
+    "The Dice score is a method to determine the accuracy of segmentation. Thereby, a ground truth image which is already given\n",
+    "in the data set is compared with the resulting image of the algorithm. The Dice score is defined as follows:\n",
     "<br>\n",
     "$$ DSC = \\frac{ 2 \\times |S \\cap G|}{|S| + |G|} $$\n",
     "<br>\n",
     "This can be applied to boolean data, where a positive result indicates a detected nucleus,\n",
-    "and a negative result describes background.\n",
-    "Comparing the segmented image to the ground truth image, a pixel counts as true positive ($TP$) if it is correctly detected as\n",
-    "nucleus. False positive ($FP$) describes pixels falsely labeled as nucleus,\n",
+    "and a negative result describes the background.\n",
+    "Comparing the segmented image to the ground truth image, a pixel counts as true positive ($TP$) if it is correctly detected as a pixel of a\n",
+    "nucleus. False positive ($FP$) describes pixels falsely labeled as nucleus-pixel,\n",
     "and false negative ($FN$) terms pixel of overseen nuclei.\n",
     "Based on this consideration, the Dice score is calculated according to the following formula, resulting in a\n",
-    "value between zero and one. The higher the value the better was the performance of the algorithm.\n",
+    "value between zero and one. The higher the value of the calculated Dice score the better was the performance of the algorithm.\n",
     "<br>\n",
     "$$ DSC = \\frac{2 TP}{2TP + FP + FN} $$\n",
     "\n",
@@ -805,25 +805,25 @@
     "The Otsu threshold in seed detection of seeded region growing is used to determine the similarity threshold, above which\n",
     "pixels are selected as seeds.\n",
     "Since normalized intensity distances are used, it is necessary to normalize the Otsu threshold as well.\n",
-    "This works fine in images with an intensity range starting from 0.\n",
+    "This works well in images with an intensity range starting from 0.\n",
     "In the N2DL-Hela data set though a very high Otsu threshold was obtained due to the normalization on an intensity range\n",
     "between 33000 and 36000. This led to memory errors because of too many seeds. It resulted in worse algorithm outcomes\n",
     "after seeded region growing and region merging because of decreased normalized intensity distances.\n",
     "Subtracting the minimal image intensity and thereby shifting the intensity range solves this issue.\n",
     "\n",
     "In unseeded region growing this issue does not occur because intensity distances are not normalized. However, for region\n",
-    "merging by intensity distance the distances are normalized. As the image was not normalized beforehand, a very small\n",
+    "merging based on intensity distance the distances are normalized. As the image was not normalized beforehand, a very small\n",
     "threshold for intensity merging has to be chosen in order to compensate this.\n",
     "\n",
     "### High cell density and intensity differences of nuclei\n",
-    "Due to the high cell density in this data set the threshold for region merging by size, under which the region is merged,\n",
-    "has to be adapted.\n",
-    "While for the N2DH-GOWT1 regions smaller than 400 pixel are merged, for N2DL-Hela images 100 is used to prevent\n",
-    "losing the in general smaller nuclei.\n",
+    "The threshold for region merging by size, under which the region is merged,\n",
+    "needs to be adapted due to the high cell density in this data set.\n",
+    "While for the N2DH-GOWT1 regions smaller than 400 pixel are merged, for N2DL-Hela images the parameter 100. This is used to prevent\n",
+    "losing nuclei that are smaller compared to the nuclei of N2DH-GOWT1.\n",
     "\n",
-    "Moreover, the nuclei differ greatly in intensity.\n",
-    "This needs to be considered for region merging based on intensity distances. The threshold has to be adjusted to the\n",
-    "darkest nuclei to prevent losing them.\n",
+    "In addition, the nuclei differ greatly in intensity.\n",
+    "This must be taken into account when merging regions based on intensity distances. The threshold has to be adjusted to the\n",
+    "darkest nuclei to avoid losing them.\n",
     "\n",
     "### Final results"
    ],
@@ -879,21 +879,20 @@
     "Region merging was performed with 0.1 as the relative Euclidean intensity distance threshold and 100 as the size\n",
     "threshold.\n",
     "\n",
-    "For unseeded region, growing preprocessing was not performed because good results were obtained without\n",
-    "it.\n",
+    "No preprocessing was performed for the unseeded region growing, as good results could be obtained without it.\n",
     "For computing the unseeded region growing algorithm, (0,0) was selected as the start pixel and 50 as the distance\n",
     "threshold.\n",
     "In the fifth picture the result after merging with 0.000001 (relative Euclidean intensity distance),\n",
     "10000 (size threshold), filtering with a median filter (sigma 3)\n",
     "to remove salt and pepper noise and clipping is shown.\n",
     "\n",
-    "Comparing the resulting images with the ground truth image shows that in unseeded region growing most nuclei\n",
-    "were detected, while after seeded region growing more nuclei are missing.\n",
-    "The Dice scores of the results confirm this. It is noticeable that the first data set led to better Dice\n",
-    "scores for seeded region growing.\n",
+    "Comparison of the result images with the ground truth image shows that in unseeded region growing most nuclei\n",
+    "were detected while more nuclei were not detected after seeded region growing.\n",
+    "This is also confirmed by the Dice scores of the results.\n",
+    "In general, the first data set leads to better Dice scores for seed region growing.\n",
     "\n",
-    "A reason why more nuclei are lost in seeded region growing compared to the first data set is the higher cell density,\n",
-    "and less intensity distances between background and nuclei. Not every nucleus contained seeds after the seed detection."
+    "One reason why more nuclei are lost in seeded region growing compared to the first data set is the higher cell density\n",
+    "and lower intensity distances between background and nuclei. Not every nucleus contained seeds after the seed detection."
    ],
    "metadata": {
     "collapsed": false
