--- a/Report_Region_Growing_Becker_Kaschnitz_Jung_Möller.ipynb
+++ b/Report_Region_Growing_Becker_Kaschnitz_Jung_Möller.ipynb
@@ -903,16 +903,14 @@
    "source": [
     "## NIH3T3\n",
     "### Bright spots in NIH3T3 data set\n",
-    "As mentioned before, the images of the third data set contain bright spots due to reflections of the microscope.\n",
-    "This raises the risk of detecting the reflections as nuclei.\n",
-    "Preprocessing to merge the bright spots into the background was evaluated.\n",
+    "The images of the third data set contain bright spots due to reflections of the microscope which raises the risk of detecting the reflections as nuclei.\n",
+    "Preprocessing can be used to merge the bright spots into the background where removal of bright spots and removal of bright spots with a border are evaluated and compared in the following.\n",
     "\n",
-    "Removal of bright spots and removal of bright spots with a border are compared.\n",
-    "For the normal bright spot removal, all pixels with intensities above a threshold are considered as bright and then\n",
-    "set to a lower intensity, resembling the background. For the removal with a border, an artificial border is created\n",
-    "around the pixels considered as too bright and is also set to a lower intensity value.\n",
+    "For the normal bright spot removal, all pixels with intensities above a threshold are considered as bright spots. The pixels intensity are then\n",
+    "set to a lower intensity, resembling the background.\n",
+    "Removal with a border creates an artificial border around the pixels that are considered as too bright which is also set to a lower intensity value.\n",
     "The removal of the bright spots with a border reduces the transition region between the bright spot and the background.\n",
-    "This transition region can not be removed otherwise because of its similar intensity to the nuclei. This prevents merging.\n",
+    "This transition region cannot be removed in any other way because of its similar intensity to the nuclei. This prevents merging.\n",
     "\n",
     "Nevertheless, the risk of merging nuclei to the background is higher, when a border is removed along with the bright\n",
     "spots. If the intensity brightness threshold is too low, parts of nuclei will be clipped as well. These small\n",
@@ -998,22 +996,21 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In the unprocessed image both, bright spot and nuclei, are detected as nuclei.\n",
+    "In the unprocessed image both bright spot and nuclei are detected as nuclei.\n",
     "This confirms that a removal of the bright image spots is necessary.\n",
-    "In the image with intact nucleus only the reflection is detected.\n",
-    "Not enough of the bright spot was removed. The intensity distance merging threshold\n",
+    "In the image with intact nucleus only the reflection is detected and not enough of the bright spot was removed.\n",
+    "The intensity distance merging threshold\n",
     "rather merges the nucleus to the background than the reflection.\n",
     "Removing a border along with the bright parts of the reflection solves this problem.\n",
     "As nearly the whole bright spot is removed, it can be merged to the background by intensity distance.\n",
     "\n",
-    "The Dice scores confirm that the third image was segmented the best.\n",
-    "However, the Dice score of the third image reveals, that a part of the nucleus was merged to the background.\n",
+    "The Dice scores confirm that the third image was segmented the best but parts of the nucleus has been merged to the background.\n",
     "This happens because the reflection leads to a smaller intensity difference between background and nucleus.\n",
     "\n",
     "### Blurs in NIH3T3 data set\n",
-    "Another challenge that had to be faced is, that some images of the third data set contained blurs, that are\n",
-    "smaller than the nuclei but have similar intensities. They are registered as a region with a relatively close mean\n",
-    "to a region of nuclei. Therefore, they are merged to nuclei even with a low intensity merging threshold.\n",
+    "A further challenge was that some images in the third data set contained blurs that were smaller than the nuclei but had similar intensities.\n",
+    "They are registered as a region with a relatively close mean to a region of nuclei.\n",
+    "Therefore, they are merged to nuclei even with a low intensity merging threshold.\n",
     "With merging by size, the blurs are merged to the nuclei. This\n",
     "happens because their intensities are more similar to the nuclei than the background."
    ],
@@ -1051,7 +1048,7 @@
    "source": [
     "### Changing background intensities\n",
     "In some images of the third data set the background intensities are changing within one image.\n",
-    "This is a problem while merging the background to one region after segmentation. This is necessary to differentiate\n",
+    "This is a problem while merging the background to one region after segmentation which is necessary to differentiate\n",
     "between nuclei and background.\n",
     "The nuclei in the darker part of the image have similar intensities to the background in the lighter part making\n",
     "merging very difficult.\n",
@@ -1064,7 +1061,7 @@
     "For the seed detection 0.001 (relative Euclidean intensity distance threshold) was used.\n",
     "Seed regions that are smaller than 5 are deleted.\n",
     "In the second row, it can be seen that merging led to problems.\n",
-    "The left image shows the result of clipping after merging with the parameters 0.057 (relative Euclidean intensity\n",
+    "The first image shows the result of clipping after merging with the parameters 0.057 (relative Euclidean intensity\n",
     "distance threshold)and 200 (size threshold).\n",
     "This led to a Dice score of 0.44 because many cells in the upper fraction of the image were lost.\n",
     "In the middle, the clipped image is seen after merging with parameters 0.056 (relative Euclidean intensity distance\n",
@@ -1072,11 +1069,11 @@
     "The Dice score decreased to 0.29 because the background is identified as two regions.\n",
     "The intensity difference between the two regions in the background is similar to the difference between nuclei\n",
     "and the background on the left side. Therefore, merging the background was not possible without losing nuclei.\n",
-    "To solve this, manuel merging of the two background regions was conducted and slightly better results were obtained\n",
+    "To solve this, manuel merging of the two background regions was conducted. By that, slightly better results were obtained\n",
     "with a Dice score of 0.50, meaning that still many cells remain undetected.\n",
     "\n",
     "Because the intensity of the background differs much among the picture, setting the bright spots to an\n",
-    "intensity similar to their neighboring background was not possible. They were set to an intensity of the background on\n",
+    "intensity similar to their neighboring background was not possible. The bright spots were consequently set to an intensity of the background on\n",
     "the right. This led to problems in region merging, as the spots could not be merged to the background without\n",
     "losing too many nuclei.\n",
     "Although the bright spot could be successfully removed in an image fragment,\n",
@@ -1115,7 +1112,7 @@
    "cell_type": "markdown",
    "source": [
     "For the unseeded region growing the following result was obtained.\n",
-    "The left image shows the result after unseeded region growing with the parameters 0.07 (relative Euclidean intensity\n",
+    "The first image shows the result after unseeded region growing with the parameters 0.07 (relative Euclidean intensity\n",
     "distance threshold) and 10000 (size threshold).\n",
     "Again after merging, a median filter with sigma 3 was used.\n",
     "The Dice score is 0.55, which shows that repeatedly not all nuclei could be detected, and the bright spots\n",
@@ -1154,9 +1151,9 @@
    "cell_type": "markdown",
    "source": [
     "Trying out different parameters on the whole image could lead to better results in seeded and unseeded region growing.\n",
-    "Long runtimes of 24 hours prevented this though.\n",
+    "However, the long runtimes of 24 hours for one image did not allow that.\n",
     "\n",
-    "Running the algorithm on less challenging images of the data set (dna01) led to better results, and a Dice score of\n",
+    "Running the algorithm on less challenging images of the data set (dna01) led to better results and a Dice score of\n",
     "0.86 for seeded and 0.95 for unseeded region growing was obtained. These are the highest Dice scores that were contained.\n",
     "Numerous and big nuclei led to the increased Dice scores.\n",
     "\n",
