--- a/Report_Region_Growing_Becker_Kaschnitz_Jung_Möller.ipynb
+++ b/Report_Region_Growing_Becker_Kaschnitz_Jung_Möller.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
@@ -802,14 +802,11 @@
    "source": [
     "## N2DL-HeLa\n",
     "### Shifted intensity range in N2DL-HeLa\n",
-    "The Otsu threshold in seed detection of seeded region growing is used to determine the similarity threshold, above which\n",
-    "pixels are selected as seeds.\n",
-    "Since normalized intensity distances are used, it is necessary to normalize the Otsu threshold as well.\n",
-    "This works well in images with an intensity range starting from 0.\n",
-    "In the N2DL-Hela data set though a very high Otsu threshold was obtained due to the normalization on an intensity range\n",
-    "between 33000 and 36000. This led to memory errors because of too many seeds. It resulted in worse algorithm outcomes\n",
-    "after seeded region growing and region merging because of decreased normalized intensity distances.\n",
-    "Subtracting the minimal image intensity and thereby shifting the intensity range solves this issue.\n",
+    "In the N2DL-Hela data set the intensity range lays between 33000 and 36000.\n",
+    "This is a problem for seeded region growing because normalized intensity distances between 0 and 1 are used.\n",
+    "If the intensity range does not start with zero, only very low intensity distances are obtained.\n",
+    "This needs to be considered for choosing thresholds for seed detection.\n",
+    "Normalizing the intensity range by subtracting the minimal image intensity of the images solves this problem and makes determening thresholds easier.\n",
     "\n",
     "In unseeded region growing this issue does not occur because intensity distances are not normalized. However, for region\n",
     "merging based on intensity distance the distances are normalized. As the image was not normalized beforehand, a very small\n",
